build: renomeando o nome do banco de dados e arrumando configuração

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=quadra-livre
+spring.application.name=quadralivre
 spring.datasource.url=jdbc:mysql://localhost:3306/quadralivre
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.drive-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
