--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+api.security.token.secret=${JWT_SECRET:12345678}
